compiler-skeleton/tests/compile-error/comp_assign.ln
a=int:

a=true;

b=b;
b:int;